statum-macros/tests/ui/invalid_transition_wrong_return.stderr
error: Invalid transition return type for `to_b`: expected return type like `Machine<NextState>` (optionally wrapped in `Option`/`Result`).

       Expected:
         fn to_b(self) -> Machine<NextState>

       Actual:
         u64
  --> tests/ui/invalid_transition_wrong_return.rs:19:5
   |
19 |     fn to_b(self) -> u64 {
   |     ^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_transition_wrong_return.rs:22:2
   |
22 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_transition_wrong_return.rs`
